--- a/src/assets/styles/Collapse.module.scss
+++ b/src/assets/styles/Collapse.module.scss
@@ -30,7 +30,7 @@
 @media (max-width:1024px) {
     .bar {
         &__content {
-            font-size: 15px;
+            font-size: 14px;
         }
     }
 }
