--- a/src/assets/styles/Layout.module.scss
+++ b/src/assets/styles/Layout.module.scss
@@ -7,7 +7,7 @@
 
 @media (max-width:1024px) {
     .container {
-        padding: 20px 50px 0 50px;
+        padding: 20px 25px 0 25px;
     }
 }
 @media (max-width:650px) {
